--- a/Linearregressionin1var.ipynb
+++ b/Linearregressionin1var.ipynb
@@ -5,7 +5,9 @@
     "colab": {
       "name": "Linearregressionin1var.ipynb",
       "provenance": [],
-      "collapsed_sections": []
+      "collapsed_sections": [],
+      "authorship_tag": "ABX9TyMIzkDjDfZx9sh7EcysOk/O",
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -17,6 +19,16 @@
   },
   "cells": [
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/thesrinivasprabhu/selfstudyml/blob/main/Linearregressionin1var.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "NFbgN86UBo9n"
@@ -27,7 +39,7 @@
         "import matplotlib.pyplot as plt\n",
         "from sklearn import linear_model"
       ],
-      "execution_count": 53,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -38,7 +50,7 @@
       "source": [
         "ds = pd.read_csv(\"houseprice.csv\")"
       ],
-      "execution_count": 54,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -54,7 +66,7 @@
       "source": [
         "ds\n"
       ],
-      "execution_count": 55,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -141,7 +153,7 @@
         "plt.xlabel('area')\n",
         "plt.ylabel('price')"
       ],
-      "execution_count": 56,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -180,7 +192,7 @@
         "reg = linear_model.LinearRegression()\n",
         "reg.fit(ds[[\"area\"]],ds.price)"
       ],
-      "execution_count": 57,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -207,7 +219,7 @@
       "source": [
         "ds[[\"area\"]]"
       ],
-      "execution_count": 58,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -285,7 +297,7 @@
       "source": [
         "ds.price"
       ],
-      "execution_count": 59,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -316,7 +328,7 @@
       "source": [
         "reg.predict([[3300]])"
       ],
-      "execution_count": 60,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -343,7 +355,7 @@
         "m = reg.coef_\n",
         "m"
       ],
-      "execution_count": 61,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -370,7 +382,7 @@
         "c = reg.intercept_\n",
         "c"
       ],
-      "execution_count": 62,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -397,7 +409,7 @@
         "y = m*(3300)+c\n",
         "y"
       ],
-      "execution_count": 63,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -429,7 +441,7 @@
         "y = m*x+c\n",
         "plt.plot(x,y,\"blue\")"
       ],
-      "execution_count": 64,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -463,7 +475,7 @@
       "source": [
         ""
       ],
-      "execution_count": 64,
+      "execution_count": null,
       "outputs": []
     }
   ]
