--- a/linearregin2variables.ipynb
+++ b/linearregin2variables.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "name": "linearregin2variables.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMIOu4Ch/8Qxi2olKCi6Aak",
+      "collapsed_sections": [],
+      "authorship_tag": "ABX9TyOv7SHTWJbS3tljGdX0OWXi",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -539,6 +540,87 @@
       "cell_type": "code",
       "metadata": {
         "id": "mLDXlA2Hx0HQ"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "NldbfGk25j1t"
+      },
+      "source": [
+        "Saving the model...."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "RbNNZu165m05"
+      },
+      "source": [
+        "import pickle"
+      ],
+      "execution_count": 36,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "06vIPOjC5pBH"
+      },
+      "source": [
+        "with open('mymodel','wb')as f:\n",
+        "    pickle.dump(reg,f)"
+      ],
+      "execution_count": 39,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Vux33zR259V2"
+      },
+      "source": [
+        "with open('mymodel','rb')as g:\n",
+        "   l =  pickle.load(g)"
+      ],
+      "execution_count": 40,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "dUXtgyvl6UIh",
+        "outputId": "0b46cea3-882d-4eb0-d9b7-d4a522d63deb"
+      },
+      "source": [
+        "l.predict([[3000,3,40]])"
+      ],
+      "execution_count": 41,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([444400.])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 41
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Dj02Dew16akT"
       },
       "source": [
         ""
