--- a/linearregin2variables.ipynb
+++ b/linearregin2variables.ipynb
@@ -6,7 +6,7 @@
       "name": "linearregin2variables.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOv7SHTWJbS3tljGdX0OWXi",
+      "authorship_tag": "ABX9TyOQULIr5HG0XwU4K3M4A8H0",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -621,6 +621,57 @@
       "cell_type": "code",
       "metadata": {
         "id": "Dj02Dew16akT"
+      },
+      "source": [
+        "from sklearn.externals import joblib as p\n",
+        "with open('mymodelsk','wb')as f:\n",
+        "    p.dump(reg,f)"
+      ],
+      "execution_count": 47,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "GejcwboN7Iqj"
+      },
+      "source": [
+        "with open('mymodelsk','rb')as g:\n",
+        "   l =  p.load(g)"
+      ],
+      "execution_count": 48,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "aQ2LLqMH7Nd7",
+        "outputId": "bb60b366-394b-42d2-f0a8-b66005754c4a"
+      },
+      "source": [
+        "l.predict([[3000,3,40]])"
+      ],
+      "execution_count": 49,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([444400.])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 49
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "cDpdK3eI7QK0"
       },
       "source": [
         ""
